Adding nearly final 'UI' and minor improvements